manifests/infrastructure/configs/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: imdbgraph-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: imdbgraph-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http
    hostname: api.imdbgraph.org
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-secret
